--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
         },
         "platform": {
             "php": "8.0.2"
-        }
+        },
+        "platform-check": true
     },
     "minimum-stability": "stable",
     "prefer-stable": true
