--- a/composer.json
+++ b/composer.json
@@ -63,8 +63,9 @@
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         },
+        "platform-check": false,
         "platform": {
-            "php": "8.0.2"
+            "php": "8.1"
         }
     },
     "minimum-stability": "stable",
